<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:id="@+id/small_card"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/small_card">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="200dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/banhmi">

        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/b_nh_m_vi_t_nam"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:fontFamily="@font/abeezee"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/star_rating">
            </ImageView>
            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginStart="60dp"
                android:text="@string/_4_8"
                android:textSize="25sp">
            </TextView>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ellipse"
                android:layout_centerVertical="true"
                android:layout_marginStart="110dp">
            </ImageView>
            <TextView
                android:layout_width="153.04dp"
                android:layout_height="wrap_content"
                android:text="@string/vi_t_nam"
                android:layout_marginStart="150dp"
                android:gravity="center_vertical"
                android:textSize="23sp"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/banhmi_review"
            android:textSize="30sp"
            android:fontFamily="@font/abeezee">
        </TextView>
    </LinearLayout>

</LinearLayout>