<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_page2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Search_recipes.Search_page_2">

    <ScrollView
        android:id="@+id/scr_fragment02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="Back"
                android:src="@drawable/button_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.027" />

            <TextView
                android:id="@+id/timcongthuc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/tim_kiem"
                android:textSize="25sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.251"
                app:layout_constraintStart_toEndOf="@+id/button_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.038" />


            <RelativeLayout
                android:id="@+id/alert"
                android:layout_width="343dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.544"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timcongthuc_text"
                app:layout_constraintVertical_bias="0.036">

                <RelativeLayout
                    android:id="@+id/icon_info"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/alert" />

                <TextView
                    android:id="@+id/interactive"
                    android:layout_width="303dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:gravity="top"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/interactive"
                    android:textSize="17sp"
                    android:textStyle="italic"
                    android:translationY="-0.73sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/input_title"
                android:layout_width="350dp"
                android:layout_height="34dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="5sp"
                android:text="@string/input_title_like"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.557"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alert"
                app:layout_constraintVertical_bias="0.013" />

            <EditText
                android:id="@+id/ingredent_like"
                android:layout_width="303dp"
                android:layout_height="48dp"
                android:background="@drawable/rounded_border"
                android:gravity="center_vertical"
                android:hint="@string/trungsua"
                android:inputType="text"
                android:lineSpacingExtra="5sp"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.351"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/input_title_dislike"
                android:layout_width="356dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="5sp"
                android:text="@string/input_title_dislike"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/input_title"
                app:layout_constraintHorizontal_bias="0.709"
                app:layout_constraintStart_toStartOf="@+id/input_title"
                app:layout_constraintTop_toBottomOf="@+id/ingredent_like"
                app:layout_constraintVertical_bias="0.018" />

            <EditText
                android:id="@+id/ingredent_dislike"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rounded_border"
                android:gravity="center_vertical"
                android:hint="@string/carau"
                android:lineSpacingExtra="5sp"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ingredent_like"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="@+id/ingredent_like"
                app:layout_constraintTop_toBottomOf="@+id/input_title_dislike"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/input_title_totaltime"
                android:layout_width="356dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="5sp"
                android:text="@string/input_title"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/input_title_dislike"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="@+id/input_title_dislike"
                app:layout_constraintTop_toBottomOf="@+id/ingredent_dislike"
                app:layout_constraintVertical_bias="0.045" />

            <EditText
                android:id="@+id/total_time"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="false"
                android:layout_centerVertical="true"
                android:autofillHints=""
                android:background="@drawable/rounded_border"
                android:gravity="center_vertical"
                android:hint="@string/phut"
                android:lineSpacingExtra="3sp"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/ingredent_dislike"
                app:layout_constraintStart_toStartOf="@+id/ingredent_dislike"
                app:layout_constraintTop_toBottomOf="@+id/input_title_totaltime" />

            <TextView
                android:id="@+id/input_atom_"
                android:layout_width="342dp"
                android:layout_height="30dp"
                android:gravity="top"
                android:lineSpacingExtra="2sp"
                android:paddingTop="4dp"
                android:text="@string/input_atom_"
                android:textSize="14sp"
                android:translationY="-0.91sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total_time"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/input_title_ration"
                android:layout_width="356dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="5sp"
                android:text="@string/input_title_khauphan"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/input_title_totaltime"
                app:layout_constraintHorizontal_bias="0.545"
                app:layout_constraintStart_toStartOf="@+id/input_title_totaltime"
                app:layout_constraintTop_toBottomOf="@+id/input_atom_"
                app:layout_constraintVertical_bias="0.042" />

            <EditText
                android:id="@+id/ration"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_border"
                android:gravity="center_vertical"
                android:hint="@string/_2"
                android:lineSpacingExtra="3sp"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="@+id/total_time"
                app:layout_constraintHorizontal_bias="0.098"
                app:layout_constraintStart_toStartOf="@+id/total_time"
                app:layout_constraintTop_toBottomOf="@+id/input_title_ration" />

            <TextView
                android:id="@+id/input_atom_02"
                android:layout_width="342dp"
                android:layout_height="30dp"
                android:layout_marginEnd="4dp"
                android:gravity="top"
                android:lineSpacingExtra="2sp"
                android:text="@string/input_atom_02"
                android:textSize="14sp"
                android:paddingTop="4dp"
                android:translationY="-0.91sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/input_atom_"
                app:layout_constraintTop_toBottomOf="@+id/ration"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button02"
                android:layout_width="343dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/t_m_c_ng_th_c"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.573"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_atom_02"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
